# nvidia-video-codec-sdk

./: Cargo.toml
src/safe/: api.rs
src/sys/linux_sys/: bindgen.sh  cuviddec.rs  nvEncodeAPI.rs  nvcuvid.rs
