[package]
name = "nvidia-video-codec-sdk"
version = "0.1.1"
edition = "2021"
license = "MIT"
rust-version = "1.70"

description = "Bindings for NVIDIA Video Codec SDK"
homepage = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
documentation = "https://docs.rs/nvidia-video-codec-sdk"
repository = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
readme = "README.md"

keywords = ["encoding", "decoding", "bindings", "nvidia", "cuda"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["ci-check"]

[dependencies]
cudarc = { git = "https://github.com/VideowindoW/cudarc.git", rev = "2f94545e919b88895f8892239b118fb2937ab332", default-features = false, features = ["driver"]}
lazy_static = "1.4.0"
libloading = "0.8"

[dev-dependencies]
vulkano = "0.33.0"

[features]
default = []
ci-check = ["cudarc/ci-check"]
